# DeepRPS

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  FREE_DEPLOY_GUIDE.md  README.md  package.json  render.yaml  requirements.txt  vercel.json
AI/gamebrain/: pyproject.toml  requirements.txt
AI/gamebrain/gamebrain/: bandit.py  core.py  database.py  fingerprint.py  storage.py
AI/gamebrain/gamebrain_rps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
AI/gamebrain/server/: main.py
AI/gamebrain/tests/: test_gamebrain.py
BE/: .gitignore  Procfile  README.md  requirements.txt
BE/examples/: run_game_loop.py
BE/gamebrain/: __init__.py  core.py  dataset.py  experts.py  storage.py  utils.py
BE/gamebrain_rps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BE/scripts/: offline_eval.py  online_eval.py  smoke_repeat_paper.py
BE/server/: main.py
BE/tests/: test_alternating.py  test_copy_exploit.py
FE/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
FE/src/: App.css  App.tsx  api.ts
api/: index.py  numpy_free_gamebrain.py  simple_gamebrain.py
assets/: index-DXYFdxEu.js
data/: gamebrain.db
public/: _redirects  index.html
public/assets/: index-C71vlTcQ.css
rps_state/: global_state.json  user_u_c48vix3ycon.json
src/: api.ts
src/components/: Icons.tsx  Toast.tsx
